--- a/package.json
+++ b/package.json
@@ -1,74 +1,34 @@
 {
-  "name": "debug-react",
-  "version": "0.0.2",
-  "description": "a template repo to build NPM package with normalized tools.",
-  "keywords": [
-    "react",
-    "typescript",
-    "template"
-  ],
-  "author": "nnecec<nnecec@outlook.coom>",
-  "main": "dist/index.js",
-  "module": "dist/index.esm.js",
-  "typings": "dist/index.d.ts",
-  "files": [
-    "README.md",
-    "CHANGELOG.md",
-    "LICENSE",
-    "dist",
-    "src"
-  ],
-  "scripts": {
-    "build": "react-scripts build",
-    "changeset": "changeset",
-    "eject": "react-scripts eject",
-    "postinstall": "husky install",
-    "lint": "eslint src/**/*",
-    "prepublishOnly": "pinst --disable",
-    "postpublish": "pinst --enable",
-    "start": "react-scripts start",
-    "test": "react-scripts test"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
-  },
-  "devDependencies": {
-    "@changesets/changelog-github": "^0.4.0",
-    "@changesets/cli": "^2.16.0",
-    "@commitlint/cli": "^13.1.0",
-    "@commitlint/config-conventional": "^13.1.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
-    "@typescript-eslint/parser": "^4.29.0",
-    "commitizen": "^4.2.4",
-    "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^7.0.0",
-    "is-ci": "^3.0.0",
-    "lint-staged": "^11.1.1",
-    "pinst": "^2.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.1",
-    "typescript": "^4.3.5"
-  },
-  "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0"
-  },
-  "packageManager": "yarn@3.0.0",
+  "name": "debug-react1",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.6.2",
-    "antd": "^4.16.10",
-    "react-router-dom": "^5.2.0"
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^16.11.19",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "antd": "^4.18.2",
+    "react": "^18.0.0-rc.0",
+    "react-dom": "^18.0.0-rc.0",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.0",
+    "typescript": "^4.5.4",
+    "web-vitals": "^2.1.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
